--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: white;
+    margin: 0 0 0 0;
 }
 
 header {
@@ -64,4 +65,8 @@ footer {
     padding-top: 30px;
     padding-bottom: 30px;
     margin: 0;
+}
+
+a {
+    text-decoration:none;
 }
